whitespace: run formatting

--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --tunnel",
+    "dev": "expo start --tunnel",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "DARK_MODE=media expo start --android",
     "ios": "DARK_MODE=media expo start --ios",
