--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "tsnd --respawn --transpile-only src/main.ts",
     "build": "tsc",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
