clean: run linting

--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,7 @@
     "lint": {
       "dependsOn": ["format:check"],
       "inputs": ["**/*.{js,jsx,ts,tsx}"]
-    }
+    },
+    "lint:fix": {}
   }
 }
