--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,9 @@
     "dev": "tsnd --respawn --transpile-only src/main.ts",
     "build": "tsc",
     "start": "node dist/main.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
