--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -9,7 +9,8 @@
     "android": "DARK_MODE=media expo start --android",
     "ios": "DARK_MODE=media expo start --ios",
     "web": "DARK_MODE=media expo start --web",
-    "lint": "expo lint",
+    "lint": "expo lint && eslint .",
+    "lint:fix": "expo lint --fix && eslint . --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -63,13 +64,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.0",
     "jscodeshift": "^0.15.2",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.13",
     "typescript": "~5.8.3"
   },
   "private": true
