--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,7 +30,6 @@
   "devDependencies": {
     "@types/node": "^24.0.3",
     "prisma": "^6.10.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "ts-node-dev": "^2.0.0"
   }
 }
