--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
     "prettier": "^3.5.3",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^5.8.3"
   },
   "packageManager": "npm@10.0.0",
   "workspaces": [
