--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -47,8 +47,8 @@
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.518.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.79.4",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
