--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,15 +21,20 @@
     "@fastify/autoload": "^6.0.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/sensible": "^6.0.0",
+    "@prisma/client": "^6.10.1",
     "@trpc/server": "^11.4.2",
+    "better-auth": "^1.2.9",
     "fastify": "^5.4.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
+    "superjson": "^2.2.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
     "prisma": "^6.10.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
