--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,12 +18,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@better-auth/expo": "^1.2.10",
     "@fastify/autoload": "^6.0.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/sensible": "^6.0.0",
     "@prisma/client": "^6.10.1",
     "@trpc/server": "^11.4.2",
-    "better-auth": "^1.2.9",
+    "better-auth": "^1.2.10",
     "fastify": "^5.4.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
