--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,8 +23,12 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/sensible": "^6.0.0",
     "@prisma/client": "^6.10.1",
+    "@tanstack/react-query": "^5.80.10",
+    "@trpc/client": "^11.4.2",
+    "@trpc/react-query": "^11.4.2",
     "@trpc/server": "^11.4.2",
     "better-auth": "^1.2.10",
+    "expo-secure-store": "^14.2.3",
     "fastify": "^5.4.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
