--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only src/main.ts",
+    "dev": "tsnd --respawn --transpile-only -r tsconfig-paths/register src/main.ts",
     "build": "tsc",
     "start": "node dist/main.js",
     "format": "prettier --write .",
@@ -39,6 +39,7 @@
     "@types/node": "^24.0.3",
     "prisma": "^6.10.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
