fix: remove redundant auth, fix deck errors

--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "turbo": "latest",
     "typescript": "^5.8.3"
   },
-  "packageManager": "npm@10.0.0",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "packageManager": "pnpm@9.0.0",
   "dependencies": {
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.5",
