--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -11,7 +11,8 @@
     "web": "DARK_MODE=media expo start --web",
     "lint": "expo lint && eslint .",
     "lint:fix": "expo lint --fix && eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "postinstall": "prisma generate --schema=../api/prisma/schema.prisma"
   },
   "dependencies": {
     "@better-auth/expo": "^1.2.10",
@@ -28,6 +29,7 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@hookform/resolvers": "^5.1.1",
     "@legendapp/motion": "^2.4.0",
+    "@prisma/client": "^6.10.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -72,9 +74,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@trpc/server": "^11.4.2",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "jscodeshift": "^0.15.2",
+    "tsx": "^4.20.3",
     "typescript": "~5.8.3"
   },
   "private": true
