--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "@trpc/react-query": "^11.4.2",
     "@trpc/server": "^11.4.2",
     "better-auth": "^1.2.10",
+    "dotenv": "^17.2.0",
     "expo-secure-store": "^14.2.3",
     "fastify": "^5.4.0",
     "fastify-cli": "^7.4.0",
