--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -69,6 +69,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.67"
   },
