--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@better-auth/expo": "^1.2.10",
     "@expo/vector-icons": "^14.1.0",
+    "@gluestack-ui/alert-dialog": "^0.1.38",
     "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
     "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/input": "^0.1.38",
+    "@gluestack-ui/modal": "^0.1.41",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/pressable": "^0.1.23",
