--- a/apps/flashd/package.json
+++ b/apps/flashd/package.json
@@ -71,6 +71,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "sonner-native": "^0.21.0",
     "superjson": "^2.2.2",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.67"
